--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "name": "online-food",
   "version": "1.0.0",
-  "description": "![01_01](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/611edbb0-bffc-4160-a1b6-b7db587a8c55)\r ![01](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/1ae22aa5-0f76-414a-b520-611cbf6a3a4f)\r ![02](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/0c9e7011-d22a-4322-b852-5c61266f506a)\r ![03](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/5a0af71b-5dd1-4f7e-b19f-683ae17c4b9b)\r ![04](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/3be33b5b-0d46-4ea2-808a-618c09878409)\r ![05](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/08f70e0d-d9cb-4dbe-8f95-afdc7d9c6eec)\r ![06](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/880ea3fc-d1d7-4040-8275-b9fe1fc4b177)\r ![07](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/61a7bc1d-b4dd-4869-9497-a322174b476b)\r ![08](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/8a696d5a-a8d0-468e-8b13-1778f63878a2)\r ![09](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/77c86602-3dd3-4491-bb64-35e5a16565ea)\r ![10](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/1b9c0097-da67-4670-a352-5ff94f1e6d12)\r ![11](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/4b79e2f9-c350-415d-8b95-828aadf11d3b)\r ![12](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/824eada1-8299-4917-a633-99589b7d47cf)\r ![13](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/7f94d286-67e6-49b5-8f81-9412f2d5cd91)\r ![14](https://github.com/ManMohanSingh031/Online-Food-Delivery-Application/assets/98742502/8261af19-6ade-4379-a864-c87158037c5a)",
+  "description": "NA",
   "main": "App.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "parcel build",
+    "start": "parcel index.html"
   },
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "babel-jest": "^29.7.0",
+    "cssnano": "^6.1.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.11.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.41",
     "process": "^0.11.10",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
     "@babel/preset-react": "^7.23.3",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^2.0.1",
+    "autoprefixer": "^10.4.20",
     "body-parser": "^1.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
