--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "App.js",
   "scripts": {
     "test": "jest",
-    "build": "parcel build",
+    "build": "parcel build index.html",
     "start": "parcel index.html"
   },
   "author": "",
